--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LevelUp Profiles - CV & LinkedIn Revamp</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+  <meta name="description" content="LevelUp Profiles offers expert CV writing and LinkedIn optimization services to help you land your dream job.">
+  <meta name="author" content="LevelUp Profiles">
+  <meta property="og:title" content="LevelUp Profiles - CV & LinkedIn Revamp" />
+  <meta property="og:description" content="Land your dream job with a powerful CV and optimized LinkedIn profile." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://your-username.github.io/cv-landing-page/" />
+  <meta property="og:image" content="https://your-username.github.io/cv-landing-page/preview.png" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
